--- a/styles/index.css
+++ b/styles/index.css
@@ -4,14 +4,15 @@
   display: grid;
   grid-template-columns: 400px 1fr;
   overflow-y: hidden;
-  max-height: 100vh;
   transition: 1s all;
+  height: calc(var(--vh) *100);
 }
 
 .allContentWrapper{
   background-color: #F3F3F3;
   fill: var(--primary);
   transition: 1s all;
+  height: calc(var(--vh) *100);
 }
 .allContentWrapper.dark{
   background-color: #363633;
@@ -21,7 +22,7 @@
 
 /* === Hero Content === */
 .heroBanner{
-  height: 100vh;
+  height: calc(var(--vh) *100);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -69,14 +70,14 @@
 
 .videoContainer video{
   width: 100%;
-  height: 100vh;
+  height: calc(var(--vh) *100);
   object-fit: cover;
 }
 
 .videoContainer {
   border: 0 solid #C5B377;
   border-right-width: 5px;
-  height: 100vh;
+  height: calc(var(--vh) *100);
 }
 
 /* === Buttons / Toggles === */
@@ -93,6 +94,7 @@
   height: 50px;
   width: 50px;
   right: 20px;
+  transition: 1s all;
   top: 20px;
   background-color: #F3F3F3;
 }
@@ -171,6 +173,10 @@
 /* === Responsive For Mobile === */
 
 @media only screen and (max-width: 750px){
+  .heroBanner{
+    position: relative;
+    height: calc(var(--vh) *100);
+  }
   .heroBannerTextWrapper{
     transition: 1s all;
     padding: 20px;
@@ -178,6 +184,11 @@
 
   .sectionContainer{
     grid-template-columns: 1fr;
+    
+  }
+
+  .allContentWrapper{
+    overflow-y: hidden;
   }
 
   .videoContainer{
@@ -185,14 +196,15 @@
     width: 100%;
     overflow-y: hidden;
     border-width: 10px !important;
-    
+    max-height: 100%;
+    overflow-y: hidden;
   }
 
   .darkToggleButton{
     z-index: 1;
     padding: 10px;
-    height: 60px;
-    width: 60px;
+    height: 50px;
+    width: 50px;
     bottom: 10px;
     right: 10px;
     transition: 1s all;
